# spendsphere-ml

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/core/: config.py  logging.py
src/services/: ocr.py
src/services/advice/: llm_utils.py
src/services/advice/prompts/: advice_prompt.txt
src/services/advice/schemas/: advice_schema.json
src/services/budget/: budget.py
src/services/budget/prompts/: budget_analysis_prompt.txt  spending_plan_prompt.txt
src/services/budget/schemas/: budget_analysis_schema.json  spending_plan_schema.json
src/services/ocr/: README.md  ocr.py
src/services/ocr/prompts/: categorize_prompt.txt  ocr_prompt.txt
src/services/ocr/schemas/: categorize_schema.json  ocr_schema.json
src/workers/: advice_worker.py  ocr_worker.py
